--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: PHP8.3
+name: PHP8.3/4
 
 on:
   push:
@@ -11,6 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: PHP Syntax Checker (Lint)
-        uses: StephaneBour/actions-php-lint@8.3
+        uses: StephaneBour/actions-php-lint@8.4
         with:
           dir: "."
